--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,38 @@
 .home-page {
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url("src/assets/nordwood-themes-kRNZiGKtz48-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
-
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+
+    h1 {
+        margin-bottom: 0;
+    }
+}
+
+.home-page::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-image: url("src/assets/frontpage.png");
+    background-size: cover;
+    background-position: center;
+    filter: brightness(1.1) blur(4px);
+    z-index: -1;
+}
+
+.home-block {
+    width: 100%;
+    max-width: 600px;
+}
+
+:root {
+    --digi--color--background--primary: #FFDD93;
+    --digi--color--background--inverted-1:#058470;
+    --digi--color--background--inverted-6: #046355;
+    --digi--color--border--secondary: #058470;
+    --digi--color--border--inverted-2: #046355;
+    --digi--color--border--neutral-3: #fff;
 }
