💄 feat(styling): add styling to list page

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,6 @@
 @import "@digi/arbetsformedlingen/dist/digi-arbetsformedlingen/digi-arbetsformedlingen.css";
 @import "@digi/arbetsformedlingen/dist/digi-arbetsformedlingen/fonts/src/fonts.css";
+
+main {
+  justify-content: center;
+}
