:lipstick: style: update color on links + for "visited"

--- a/src/pages/ListPage/JobList.css
+++ b/src/pages/ListPage/JobList.css
@@ -22,6 +22,9 @@
 .job-list-item a {
   color: #046355;
 }
+.job-list-item a:visited {
+  color: #6a958e;
+}
 .job-list-item a:hover {
   color: black;
 }
