--- a/src/pages/JobInfo/JobInfo.css
+++ b/src/pages/JobInfo/JobInfo.css
@@ -2,6 +2,16 @@ main {
     display: flex;
     width: 100%;
 }
+.sc-digi-link-s>a svg, 
+.sc-digi-link-s>a {
+  color: #046355;
+
+}
+
+.sc-digi-link-s>a:visited,
+.sc-digi-link-s>a:visited svg  {
+  color: #046355;
+}
 
 .top{
     text-align: center;
